@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.89 (gritter) 9/3/06";
+	"@(#)/usr/ucb/otfdump.sl	7.90 (gritter) 9/3/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.89 (gritter) 9/3/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.89 (gritter) 9/3/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.90 (gritter) 9/3/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.90 (gritter) 9/3/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.89 (gritter) 9/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.90 (gritter) 9/3/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.89 (gritter) 9/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.90 (gritter) 9/3/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.89";
+const char revision[] = "7.90";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.82 (gritter) 8/24/06
@@ -46,7 +46,7 @@ troff.d/otf.c: * Sccsid @(#)otf.c	1.58 (gritter) 8/12/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/pt.h: * Sccsid @(#)pt.h	1.52 (gritter) 8/12/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.85 (gritter) 9/1/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.171 (gritter) 8/13/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.172 (gritter) 9/3/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.26 (gritter) 8/12/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
